--- a/moviereviews/static/index.css
+++ b/moviereviews/static/index.css
@@ -82,6 +82,7 @@ main .section_1{
 
 main .card{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    transition: 0.3s all;
 }
 
 #read_more{
