--- a/moviereviews/templates/accountpost.html
+++ b/moviereviews/templates/accountpost.html
@@ -11,7 +11,7 @@
                  <div class="row next" > 
                     {% for m in movie %}
                    
-                       <div class="col-lg-4 col-md-8 col-sm-12 col-12 p-3" >
+                       <div class="col-12 p-3" style="width:auto;" >
                            <div class="card bg-dark">
                                <div class="card-body ">
                                    <div class="text-center">
@@ -22,6 +22,7 @@
    
                                        <h3 class="text-primary h6">{{m.name}}</h3>
                                        <i id="read_more" class="text-secondary">{{m.releasedate}}</i>
+                                      
                                        <a id="read_more" href="{% url 'details_Post' m.id %}">Read more</a>
                                    </div>
                                </div>
@@ -75,8 +76,8 @@
 <script>
     $(document).ready(function (){
       $('.next').slick({
-dots: true,
-infinite: false,
+dots: false,
+infinite: true,
 speed: 300,
 slidesToShow: 3,
 slidesToScroll: 1,
@@ -87,7 +88,7 @@ responsive: [
       slidesToShow: 2,
       slidesToScroll: 1,
       infinite: true,
-      dots: true
+      dots: false
     }
   },
   {
