--- a/moviereviews/templates/home.html
+++ b/moviereviews/templates/home.html
@@ -265,7 +265,7 @@
       $(document).ready(function() {
     $('#responsive').lightSlider({
         item:4,
-        loop:false,
+        loop:true,
         slideMove:2,
         easing: 'cubic-bezier(0.25, 0, 0.25, 1)',
         speed:600,
